# grades

./: .eslintignore  .eslintrc.json  .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: check-version-release.yml  check.yml  codeql.yml  create-release.yml  publish-release.yml  publish.yml  test-build.yml  test.yml
.run/: All Tests.run.xml  build entity.run.xml  tauri build.run.xml  tauri dev.run.xml  tauri.run.xml
src/: App.tsx  atoms.ts  index.css  main.tsx  router.tsx  setupTests.ts  utils.tsx
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  build.rs  db.db  db.sqlite  diesel.toml  generate.sh  runs.bat  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: grade_types.rs  grades.rs  lib.rs  mod.rs  periods.rs  prelude.rs  setting.rs  subjects.rs  weights.rs
src-tauri/migrations/: Cargo.toml
src-tauri/migrations/2022-09-01-202003_adding types and subject tables/: down.sql  up.sql
src-tauri/migrations/2022-09-01-212557_adding grades table/: down.sql  up.sql
src-tauri/migrations/2022-09-01-213552_renaming type to grade_type/: down.sql  up.sql
src-tauri/migrations/2022-09-01-214108_renaming type to grade_type (2)/: down.sql  up.sql
src-tauri/migrations/src/: lib.rs  m20220906_221454_added_types_and_subjects_tables.rs  m20220907_021039_added_grades_table.rs  m20220907_022500_added_unique_indexes.rs  m20220907_201550_added_grade_to_grade.rs  m20220929_160232_added_periods_table.rs  m20221012_174650_added_period_to_grade.rs  m20221012_184535_added_not_final_and_count2_to_grade.rs  m20221016_122525_add_settings_to_db.rs  m20221108_010923_removed_settings.rs  m20221108_011056_added_unique_indexes_period.rs  m20221204_223500_add_dates_to_grade.rs  m20221205_125634_removed_double_added_multiplier_to_grades.rs  m20221205_125634_removed_double_added_weight_to_grades.rs  m20221213_121035_made_grade_optional_removed_not_final.rs  m20230102_000204_move_weights_into_separate_table.rs  m20230102_011659_move_replaced_grade_weight_enum_with_weight_fk.rs  m20230208_190225_made_date_optional.rs  main.rs
src-tauri/src/: cli.rs  commands.rs  db.rs  dirs.rs  logging.rs  main.rs  schema.rs  utils.rs
src-tauri/src/cache/: cache.rs  error.rs  init.rs  main.rs  mod.rs  types.rs
src-tauri/src/commands/: cache.rs  config.rs  db.rs  info.rs  mod.rs  other.rs  utils.rs
src-tauri/src/commands/cache/: cache.rs
src-tauri/src/commands/config/: config.rs
src-tauri/src/commands/db/: grades.rs  periods.rs  subjects.rs  types.rs  weights.rs
src-tauri/src/config/: config.rs  error.rs  init.rs  main.rs  mod.rs  types.rs
src-tauri/src/db/: cache.rs  database.rs  dirs.rs  error.rs  grades.rs  mod.rs  periods.rs  subjects.rs  types.rs  utils.rs  weights.rs
src/Analysis/: Analysis.test.tsx  Analysis.tsx  route.tsx
src/Analysis/GradesSum/: index.tsx
src/Analysis/SubjectsOverPeriods/: index.tsx
src/Overview/: AppBar.tsx  Both.test.tsx  Overview+OverviewAppBar.test.tsx  Overview.test.tsx  Overview.tsx  OverviewAppBar.test.tsx  OverviewAppBar.tsx  atoms.ts  delete.ts  edit.ts  load.ts  route.tsx  sort.ts  table.ts  table.tsx
src/Overview/NewGradeModal/: NewGradeModal+OverviewAppBar.test.tsx  NewGradeModal.test.tsx  NewGradeModal.testt.tsx  NewGradeModal.tsx  route.tsx
src/Settings/: Settings.tsx  atoms.ts  create.ts  delete.ts  edit.ts  load.ts  route.tsx  save.ts  table.tsx  update.ts
src/commands/: cache.ts  commands.ts  create.ts  delete.ts  edit.ts  editList.ts  get.ts  load.ts  reset.ts
src/components/AnalysisBox/: AnalysisBox.tsx
src/components/AppBar/: CAppBar.tsx
src/components/Chart/: Chart.tsx
src/components/Info/: Info.tsx
src/components/LinkRef/: LinkRef.tsx
src/components/Navbar/: Navbar.tsx
src/components/NewGradeModal/: NewGradeModal.tsx  NewGradleModal.css  create.ts  load.ts  loadDefaults.ts
src/components/NewModal/: NewModal.tsx
src/components/ReactQueryData/: ReactQueryData.tsx  ReactQueryDataMultiple.tsx  loadings.tsx
src/components/SettingsBox/: SettingsBox.tsx
src/components/Table/: Table.tsx  defs.ts  sort.ts
src/components/Toast/: toast.tsx
src/components/TopBar/: Topbar.tsx
src/components/navbar/: navbar.tsx
src/components/table/: defs.ts  sort.ts  table.tsx  util.ts
src/entity/: grade.ts  index.ts  info.ts  period.ts  setting.ts  subject.ts  type.ts  weights.ts
src/entity/cache/: index.ts  page.ts  version.ts
src/entity/config/: gradeModalDefaults.ts  index.ts  noteRange.ts
src/ts/: CAppBar.tsx  commands.ts  folders.ts  load.ts  mock.ts  root.tsx  router.tsx  testingUtils.tsx  theme.d.ts  toast.tsx  utils.test.ts  utils.ts  zod.ts
workflows/: .gitignore  .swcrc  package.json  tsconfig.json
workflows/src/: check-version-release-check-latest-release-version.ts  create-release-create-release.ts  create-release-update-release.ts  publish-create-release.ts  publish-publish-release.ts  publish-release-publish-release.ts  type.ts
