[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.sea-orm]
version = "0.9.2"
