[package]
name = "migration"
version = "0.15.0"
edition = "2021"
publish = false

[lib]
name = "migrations"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1.23", features = ["full"] }
sea-orm-migration = { version = "0.10.5", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
log = "^0.4"